--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # general
 .vscode/
+Coverage/
 
 # Prerequisites
 *.d
@@ -53,3 +54,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Binaries
+*.bin
+*.gcno
+*.gcda
